fix bar overlapping chart label

--- a/client/src/components/MyProgress/MyProgress.scss
+++ b/client/src/components/MyProgress/MyProgress.scss
@@ -38,6 +38,7 @@
     background-color: white;
     max-width: 50%;
     align-content: center;
+    margin-top: 20px;
   }
 
   .list-exercise {
